# ASI_Assignment_Group6

./: .gitignore  AEVB_Experiment_Handoff_Report.md  README.md  SUBMISSION_PACKAGE_README.md  pyproject.toml  requirements.txt
configs/: aevb_binarized_practical.yaml  marginal_likelihood_z3_h100_practical.yaml  quick_debug.yaml  wake_sleep_binarized_practical.yaml
notebooks/: AEVB_MNIST_Reproduction_v3_colab.ipynb  AEVB_MNIST_Reproduction_v3_colab_executed.ipynb
results/checkpoints/: aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300_epoch100.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300_epoch150.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300_epoch200.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300_epoch250.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e300_epoch50.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p01_e5_pilot.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p02_e5_pilot.pt  aevb_static_bernoulli_z10_h500_seed0_lr0p1_e5_pilot.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300_epoch100.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300_epoch150.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300_epoch200.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300_epoch250.pt  aevb_static_bernoulli_z10_h500_seed1_lr0p01_e300_epoch50.pt  (+135 more)
scripts/: backup_results.py  collect_results.py  make_figures.py  run_aevb_sweep.py  run_marginal_likelihood.py  run_pilot.py  run_smoke_tests.py  run_v3_suite.py  run_wake_sleep.py
src/aevb_v3/: __init__.py  (+14 more)
(+35 files in other folders)
