[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aevb-mnist-reproduction-v3"
version = "0.1.0"
description = "Paper-aligned practical MNIST reproduction code for Auto-Encoding Variational Bayes."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
